<resources>
    <string name="app_name">Rentals Connect</string>
    <string name="login_to_your_account">Sign In</string>
    <string name="phone_number">Phone Number</string>
    <string name="empty" />
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign in</string>
    <string name="my_rentals">My Rentals</string>
    <string name="my_account">My Account</string>
    <string name="click_back_again">click back again to exit</string>
    <string name="network_error">Cannot connect to Internet…Please check your connection!</string>
    <string name="server_error">The server could not be found. Please try again after some time!!</string>
    <string name="auth_error">Authentication Failed, Please try again!</string>
    <string name="parse_error">Parsing error! Please try again after some time!!</string>
    <string name="timeout_error">Connection TimeOut! Please check your internet connection.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_names">Full names</string>
    <string name="hello">Hello,</string>
    <string name="what_will_you_do_today">What will you do today?</string>
    <string name="building_name">Building:</string>
    <string name="building_name2">Building name</string>
    <string name="house_no">House No:</string>
    <string name="house_unit">House Unit:</string>
    <string name="hse_unit">Hse Unit:</string>
    <string name="has_balance">Has balance</string>
    <string name="no_balance">No balance</string>
    <string name="house_no2">House No</string>
    <string name="status">Status</string>
    <string name="home">Home</string>
    <string name="nyakongo_towers_house_i23">Nyakongo towers, House I23</string>
    <string name="house_details">House details</string>
    <string name="rent_payment">Rent payment</string>
    <string name="lease_details">Lease details</string>
    <string name="complaints">Raise alert</string>
    <string name="upcoming_bills">Pending bills</string>
    <string name="view_all">View all</string>
    <string name="bill_name">Bill Name</string>
    <string name="due_date">Due date:</string>
    <string name="bill_created">Created on:</string>
    <string name="pay">Pay</string>
    <string name="ksh">KSH</string>
    <string name="balance">Balance</string>
    <string name="_0712345678">example: 0712345678</string>
    <string name="amount">Amount</string>
    <string name="send_money">Send money</string>
    <string name="total_balance">Total Balance</string>
    <string name="ksh_5_000">KSH 5,000</string>
    <string name="lipa_na_mpesa">Lipa na Mpesa</string>
    <string name="search">Search</string>
    <string name="date">Date</string>
    <string name="credit">+ KSH</string>
    <string name="debit">- KSH</string>
    <string name="agreement_until">Agreement Until</string>
    <string name="download_lease">Download lease</string>
    <string name="undefined">Undefined</string>
    <string name="landlord_information">Landlord information</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="rental_information">Rental information</string>
    <string name="rent_amount">Rent amount</string>
    <string name="service_charge">Service charge</string>
    <string name="pay_period">Pay period</string>
    <string name="evey_5th_of_the_month">evey 5th of the month</string>
    <string name="start_date_of_agreement">Start date of agreement</string>
    <string name="vacation_notice">Vacation notice</string>
    <string name="_2_months">2 months</string>
    <string name="vacation_charges">Vacation charges</string>
    <string name="request_lease_termination">Request lease termination</string>
    <string name="more_information">More information</string>
    <string name="flat">Flat</string>
    <string name="_1_bedroom">1 bedroom</string>
    <string name="_1_bathroom">1 bathroom</string>
    <string name="tenant_name">Tenant name</string>
    <string name="tenant_phone_no">Tenant phone no</string>
    <string name="total_rooms">Total rooms</string>
    <string name="_2_rooms">2 rooms</string>
    <string name="facilities">Facilities</string>
    <string name="wi_fi_water_electricity">Wi-Fi, Water, Electricity</string>
    <string name="no_parking">No parking</string>
    <string name="house_photos">House photos</string>
    <string name="tenant_id_no">Tenant ID No</string>
    <string name="nyakongo_towers_house_i23_hse_id_nyk202">Nyakongo towers, House I23 | Hse id: NYK202</string>
    <string name="transactions">Payments</string>
    <string name="inv0000001">Invoice No.</string>
    <string name="my_transactions">My Payments</string>
    <string name="download_statement">Download statement</string>
    <string name="latest_transactions">Latest payments</string>
    <string name="transactions_log">Transactions Log</string>
    <string name="_2020_transactions">2020 Transactions</string>
    <string name="_2019_transactions">2019 Transactions</string>
    <string name="_2018_transactions">2018 Transactions</string>
    <string name="invoice_no">Inv No:</string>
    <string name="choose_your_preferred_mode_of_payment">Choose mode of payment</string>
    <string name="total_amount">Total Amount :</string>
    <string name="mpesa">Mpesa</string>
    <string name="a_request_to_pay_will_be_sent_to_your_phone">A request to pay will be sent to your phone</string>
    <string name="please_use_the_details_below_to_complete_your_payment_from_your_bank_of_choice">Please use the details below to complete your payment from your bank of choice.</string>
    <string name="bank">Bank</string>
    <string name="select_bank">Select bank</string>
    <string name="instructions">Instructions</string>
    <string name="follow_the_instructions_below_to_pay_using_the_selected_bank_above">Follow the instructions below to pay using the selected bank above:</string>
    <string name="bill_payment">Bill Payment</string>
    <string name="pay_balance">Pay Balance</string>
    <string name="house_id">House ID :</string>
    <string name="house_id2">House ID</string>
    <string name="complaint">Complaints</string>
    <string name="profile">Profile</string>
    <string name="new_complaint">New complaint</string>
    <string name="my_complaints">My Complaints</string>
    <string name="search_title">Search title</string>
    <string name="pending">Pending</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer convallis urna nunc, eget interdum neque porta ut. Donec tristique elit sed orci tristique, a venenatis leo tincidunt. Aenean tellus nunc, porttitor id malesuada in, cursus volutpat quam. Vivamus et ante dolor. Nulla sit amet consectetur nibh, ac pretium nunc. In purus dolor, lobortis non sapien vitae, varius volutpat augue. Quisque pellentesque hendrerit magna at iaculis. Nulla volutpat, tellus non posuere accumsan, magna tortor suscipit mauris, ut blandit ante massa vitae ipsum. </string>
    <string name="my_profile">My profile</string>
    <string name="johndoe_gmail_com">johndoe@gmail.com</string>
    <string name="john_doe">John Doe</string>
    <string name="my_messages">My Messages</string>
    <string name="_4">4</string>
    <string name="request_full_statement_to_email">Request Payments Statement</string>
    <string name="payment_details">Payment Details</string>
    <string name="change_password">Change Password</string>
    <string name="sign_out">Sign Out</string>
    <string name="total_rental_balance">Rental Balance</string>
    <string name="rent_statement">Rent statement</string>
    <string name="national_id_number">National ID Number</string>
    <string name="id_no">ID No</string>
    <string name="just_a_moment">Just a moment...</string>
    <string name="failed_picture">Picture upload failed</string>
    <string name="toast_image_intent_null">Image picker option is missing!</string>
    <string name="are_you_sure_you_want_to_sign_out">Are you sure you want to sign out?</string>
    <string name="cancel">Cancel</string>
    <string name="proceed">Proceed</string>
    <string name="no_rentals_found_swipe_down_to_refresh">No rentals found. Swipe down to refresh</string>
    <string name="not_set">Not set</string>
    <string name="you_have_no_pending_bills">You have no pending bills</string>
    <string name="no_payments_found_swipe_down_to_refresh">No payments found, swipe down to refresh</string>
    <string name="approved">Approved</string>
    <string name="declined">Declined</string>
    <string name="paid_via">Paid via:</string>
    <string name="date_from">Date from</string>
    <string name="pick_date">pick date</string>
    <string name="to_date">To date</string>
    <string name="no_records_found_swipe_down_to_refresh">No records found, swipe down to refresh</string>
    <string name="select_house_unit">Select house unit</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="enter_description">Enter description...</string>
    <string name="enter_title">Enter title...</string>
    <string name="attach_image">Attach image</string>
    <string name="attach_photo">Choose photo</string>
    <string name="optional">(optional)</string>
    <string name="dialog_permission_title">Grant Permissions</string>
    <string name="dialog_permission_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="go_to_settings">GOTO SETTINGS</string>
    <string name="gallery">Gallery</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="submit_complaint">Submit complaint</string>
    <string name="view_complaint">View complaint</string>
    <string name="delete_complaint">Delete Complaint</string>
    <string name="confirm_delete_complaint">Are you sure you want to delete this complaint?</string>
    <string name="capture_payment">Capture Payment</string>
    <string name="the_purpose_capture_payment_note">The purpose of this is for proof of bill payment. Attach a photo of you back receipt and fill the other provided fields for a successful submission. \n\nIt may take 1–2 working days for such payments to reflect in your account. You can track all your submitted receipts under \'My Account>Captured payments history\'.</string>
    <string name="receipt_photo">Receipt photo</string>
    <string name="submit">Submit</string>
    <string name="request_submit_success_title">Payment request captured</string>
    <string name="complaint_success_title">New complaint submitted</string>
    <string name="complaint_success">Your complaint has been submitted successfully. Our team will review it and get back to you at our soonest convenience. If you feel your issue is very urgent please contact your landlord directly.</string>
    <string name="request_submit_success">Request sent successfully. You can view the all you sent requests under My Account>Captured payments history. You will be notified as soon as your request is reviewed.</string>
    <string name="enter_amount">Enter amount...</string>
    <string name="success">Success</string>
    <string name="capture_payment_history">Captured payments history</string>
    <string name="charged_ksh">Charged (KSH)</string>
    <string name="payment_ksh">Payment (KSH)</string>
    <string name="lease_terms_and_conditions">Lease terms and conditions</string>
</resources>
