<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <TextView
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/date"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@color/TableTitle"
        android:lineSpacingMultiplier="1.2"/>

    <TextView
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/inv0000001"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@color/TableTitle"
        android:lineSpacingMultiplier="1.2"/>

    <TextView
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/charged_ksh"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@color/TableTitle"
        android:lineSpacingMultiplier="1.2"/>


    <TextView
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/payment_ksh"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="@color/TableTitle"
        android:lineSpacingMultiplier="1.2"/>

</LinearLayout>